deployment/k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eg-identity-management
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eg-identity-management
  template:
    metadata:
      labels:
        app: eg-identity-management
    spec:
      containers:
      - image: inftfg2021/eg.identity.management:$TAG
        name: eg-identity-management
---
apiVersion: v1
kind: Service
metadata:
  name: eg-identity-management-service
  labels:
    app: eg-identity-management
spec:
  type: ClusterIP  
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: eg-identity-management

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    dev.okteto.com/generate-host: "true"
  name: eg-identity-management-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: eg-identity-management-service
          servicePort: 8081
        path: /identity/
